--- a/web/package.json
+++ b/web/package.json
@@ -7,13 +7,17 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.18",
+    "graphql": "^15.5.0",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "sass": "^1.32.13",
     "typescript": "^4.1.2",
     "vite": "^2.3.0"
   }
