--- a/web/package.json
+++ b/web/package.json
@@ -14,9 +14,12 @@
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
+    "@types/node": "^15.0.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.15",
     "sass": "^1.32.13",
     "typescript": "^4.1.2",
     "vite": "^2.3.0"
