--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,20 +1,26 @@
 {
   "compilerOptions": {
+    "baseUrl": "./src",
+    "paths": {
+      "@containers/*": ["./containers/*"],
+      "@components/*": ["./components/*"],
+      "@images/*": ["./assets/images/*"]
+    },
     "target": "ESNext",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "types": ["vite/client"],
     "allowJs": false,
-    "skipLibCheck": false,
+    "skipLibCheck": true,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
+    "experimentalDecorators": true,
     "module": "ESNext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
-  },
-  "include": ["./src"]
+    "jsx": "react-jsx"
+  }
 }
