--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,8 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-icons": "^4.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-textarea-autosize": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^15.0.3",
