--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^15.0.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.15",
