--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -4,6 +4,7 @@
     "paths": {
       "@containers/*": ["./containers/*"],
       "@components/*": ["./components/*"],
+      "@pages/*": ["./pages/*"],
       "@images/*": ["./assets/images/*"]
     },
     "target": "ESNext",
