--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -7,7 +7,8 @@
       "@pages/*": ["./pages/*"],
       "@images/*": ["./assets/images/*"],
       "@utils/*": ["./utils/*"],
-      "@graphql-util/*": ["./utils/graphql/*"]
+      "@graphql-util/*": ["./utils/graphql/*"],
+      "@context/*": ["./context/*"]
     },
     "target": "ESNext",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
